--- a/map.html
+++ b/map.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
+    <div class="container" style="width: 100%;">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
@@ -33,37 +33,110 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><img src="img/logo.png" height="30" alt="Dashboard" /></a>
+            <a class="navbar-brand" href=""><img src="img/logo.png" height="30" alt="Dashboard" /></a>
         </div>
     </div>
 </nav>
 
 <div class="page-header" style="margin: 60px 0px 0px;">
-    <h1 style="margin-left: 20px;">Available tickets</h1>
+    <h1 style="margin-left: 15px;">Export tickets</h1>
 </div>
-<div class="left_panel"></div>
+<div class="left_panel">
+    <h4 style="margin-left: 15px;">Tickets:</h4>
+    <ul id="ticket_list">
+
+    </ul>
+</div>
 <div class="right_panel" id="map"></div>
 
 
 
 <script type="application/javascript">
     $(document).on('ready',function(){
+        window.maps.GoogleMaps.initMap('map');
         getMap().then(function(data){
-            window.maps.GoogleMaps.initMap('map');
+            buildList(data);
+            showMarkers(data);
         });
 
 
 
+        function showMarkers(data){
+            var markers = [],
+                icon;
+            var i = 0,
+                current,
+                l = data.length;
+            for (i = 0; i < l; i++) {
+                current = data[i];
+                icon = iconMaper(current.data.Status),
+                markers[current.id] = window.maps.GoogleMaps.addMarker(current.lat,current.lng,current.data, icon);
+            };
+        }
+
+        function buildList(data){
+            var i,
+                html = [],
+                l = data.length;
+            for (i = 0; i < l; i++) {
+                html.push(
+                    '<li>',
+                        '<a class="marker-name" data-lat="',data[i].lat,'" data-lon="',data[i].lng,'">',
+                            '<img src="',
+                                iconMaper(data[i].data.Status),
+                            '">',
+                            data[i].id,
+                        '</a>',
+                    '</li>'
+                );
+            }
+
+            $('#ticket_list').html(html.join(''));
+
+            $('.marker-name').on('click', function(e){
+                e.preventDefault();
+                var lat, lon;
+                lat = $(e.target).attr('data-lat');
+                lon = $(e.target).attr('data-lon');
+                centerMap(lat,lon)
+            })
+        }
 
         function getMap(hash){
             return $.ajax({
-                url:[utils.baseUrl(),
-                    "api/map?hash=",
-                    hash
+                url:[
+                    "map?id=",
+                    getHash()
                 ].join(''),
                 type:'get',
                 dataType:'JSON'
             })
+        }
+
+        function getHash(){
+            return window.location.hash.replace('#','');
+        }
+
+        function centerMap(lat, lon){
+            window.maps.GoogleMaps.centerMap(lat,lon);
+        }
+
+        function iconMaper(status){
+            console.log(status);
+            var icons = {
+                'TESTED': 'http://maps.google.com/mapfiles/ms/micons/green-dot.png',
+                'BUILT': 'http://maps.google.com/mapfiles/ms/micons/green-dot.png',
+                'HELD-CONTRACTOR':'http://maps.google.com/mapfiles/ms/micons/ltblue-dot.png',
+                'IN-PROGRESS':'http://maps.google.com/mapfiles/ms/micons/yellow-dot.png',
+                'SCHEDULED': 'http://maps.google.com/mapfiles/ms/micons/ltblue-dot.png',
+                'DEFERRED': 'http://maps.google.com/mapfiles/ms/micons/red-dot.png',
+                'DEMANDDROPS': 'http://maps.google.com/mapfiles/ms/micons/red-dot.png',
+                'DIRTY':  'http://maps.google.com/mapfiles/ms/micons/red-dot.png',
+                'HEC':  'http://maps.google.com/mapfiles/ms/micons/ltblue-dot.png',
+                'HELD-NBN': 'http://maps.google.com/mapfiles/ms/micons/red-dot.png'
+            }
+
+            return icons[status] || 'http://maps.google.com/mapfiles/ms/micons/ltblue-dot.png';
         }
     });
 </script>
