--- a/map.html
+++ b/map.html
@@ -33,7 +33,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href=""><img src="img/logo.png" height="30" alt="Dashboard" /></a>
+            <a class="navbar-brand" href="/"><img src="img/logo.png" height="30" alt="Dashboard" /></a>
         </div>
     </div>
 </nav>
